--- a/index.html
+++ b/index.html
@@ -10,17 +10,6 @@
     <div id="title"></div>
     <div id="content"></div>
     <script>
-      const state = {
-        title: {
-          text: "标题",
-          color: "blue",
-        },
-        content: {
-          text: "内容",
-          color: "red",
-        },
-      };
-
       const renderTitle = (title, oldTitle = {}) => {
         if (title === oldTitle) return;
         console.log("render title...");
@@ -46,6 +35,18 @@
 
       // function dispatch
       const stateChanger = (state, action) => {
+        if (!state) {
+          return {
+            title: {
+              text: "标题",
+              color: "blue",
+            },
+            content: {
+              text: "内容",
+              color: "red",
+            },
+          };
+        }
         switch (action.type) {
           case "UPDATE_TITLE_TEXT":
             return {
@@ -67,25 +68,28 @@
             return state;
         }
       };
-
-      const createStore = (state, stateChanger) => {
+      // reducer是一个纯函数
+      const createStore = (reducer) => {
+        let state = null
         const listeners = [];
         const subscribe = (listener) => listeners.push(listener);
         const getState = () => state;
         const dispatch = (action) => {
-          state = stateChanger(state, action);
+          state = reducer(state, action);
           listeners.forEach((listener) => listener());
         };
+        // 初始化state
+        dispatch({})
         return { getState, dispatch, subscribe };
       };
 
-      const store = createStore(state, stateChanger);
+      const store = createStore(stateChanger);
       // 缓存旧的state
-      let oldState = store.getState()
+      let oldState = store.getState();
       store.subscribe(() => {
-        const newState = store.getState()
-        renderApp(oldState, newState)
-        oldState = newState
+        const newState = store.getState();
+        renderApp(oldState, newState);
+        oldState = newState;
       });
 
       renderApp(oldState);
